Fixed copy all alignment

--- a/src/Pages/WelcomeScreens/style.module.scss
+++ b/src/Pages/WelcomeScreens/style.module.scss
@@ -523,8 +523,8 @@
 }
 
 .copyButton {
-  padding: 0 18px 0;
-  position: absolute;
+  padding: 0 0 6px 6px;
+  // position: absolute;
   right: 0;
   // top: 11%;
   // z-index: 99999;
